--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,9 +28,18 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
+      - name: Copy folder
+        run: |
+          cp -r cd /tmp/docs
+          
+      - name: Publish artifacts
+        uses: actions/upload-artifact@v2
+        with:
+              name: My Docs
+              path: /tmp/docs
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      #- name: Run a multi-line script
+        #run: |
+          #echo Add other actions to build,
+          #echo test, and deploy your project.
